Changelog
=========

0.5.7 (unreleased)
------------------

- Added not yet declared test dependency on ``zope.testing``.


0.5.6 (2010-04-19)
------------------

- Remove broken templates from registry during engine migration. In
  some testing situation, stale templates would be tracked in the
  regitry.

- Existing template instances are now migrated to the right engine
  when using the ``enable`` and ``disable`` methods. [malthe]

0.5.5 (2009-07-24)
------------------

- Make tests pass in a binary release by not relying on the pacakge structure.

0.5.4 (2009-07-23)
------------------

- Added a test requirement explicitely.

0.5.3 (2009-05-28)
------------------

- Added support for browser:addform, browser:editform, browser:form,
  and browser:schemadisplay directives.

0.5.2 (2009-03-09)
------------------

- Fixing brown-bag release 0.5.1.

0.5.1 (2009-03-09)
------------------

- Added missing ``lxml`` test dependency.

- Fixed tests to work with current version of z3c.pt.

- Fixed autor e-mail address.

- Added doctests and change log to long description to show up at pypi
  homepage.

- Reformatted release dates in change log to use iso dates.

0.5 (2009-02-16)
----------------

- Added module which patches ``zope.app.pagetemplate`` such that
  template classes depend on ``z3c.pt`` for rendering (import
  optional). [malthe]

0.4 (2009-02-10)
----------------

- Rename project to z3c.ptcompat to deal with setuptools issues (as discussed
  on zope-dev http://mail.zope.org/pipermail/zope-dev/2008-December/033820.html)

- Added optional option ``doctest`` for output checker to allow usage
  with alternative implementations, e.g. the Zope doctest
  module. [malthe]

- Added tests for meta-directives and fixed some minor errors. [malthe]

- Added update-tool to walk a source tree and automatically rewrite
  template import statements in each file. [malthe]

- Added meta-directives for browser pages and viewlets. These build