@@ -1,12 +1,14 @@
-import zope.interface
-import zope.component
-
-import os
-import unittest
 import doctest
+import os
+import os.path
+import unittest
+import zope.component
+import zope.interface
+
 
 OPTIONFLAGS = (doctest.ELLIPSIS |
                doctest.NORMALIZE_WHITESPACE)
+
 
 import zope.component.testing
 import zope.configuration.xmlconfig
@@ -25,6 +27,12 @@ def setUp(test):
 
 def tearDown(test):
     zope.component.testing.tearDown(test)
+    compiled_file = os.path.join(os.path.dirname(__file__), 'test.pt.py')
+    if os.path.exists(compiled_file):
+        # this file leads to an ImportError on the next test run, so we
+        # delete it as it was generated an can be regenerated by the next
+        # test run
+        os.unlink(compiled_file)
 
 def test_suite():
     import z3c.ptcompat.tests
@@ -35,7 +43,7 @@ def test_suite():
         path=path,
         interface=zope.interface,
         component=zope.component)
-    
+
     return unittest.TestSuite([
         doctest.DocFileSuite(
         "zcml.txt",
@@ -44,6 +52,3 @@ def test_suite():
         setUp=setUp,
         tearDown=tearDown,
         package="z3c.ptcompat")])
-
-if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
